2002-07-04  Miles Bader  <miles@gnu.org>

	* comint.el (comint-displayed-dynamic-completions): New variable.
	(comint-dynamic-list-completions): Be more careful about choosing
	when to scroll an existing completions window.

2002-07-03  Andreas Schwab  <schwab@suse.de>

	* net/tramp.el (tramp-handle-ange-ftp): Move interactive spec
	after doc string.

2002-07-03  Juanma Barranquero  <lektu@terra.es>

	* net/tramp.el (tramp-send-eof): Fix typo.
	(tramp-kill-process): Likewise.

	* play/dunnet.el (dun-physobj-desc): Likewise.

	* textmodes/reftex-vars.el (reftex-label-alist): Likewise.

	* calendar/timeclock.el (timeclock-workday-remaining): Likewise.
	(timeclock-workday-elapsed): Likewise.

	* allout.el (outline-goto-prefix): Likewise.

	* emulation/tpu-edt.el (tpu-delete-to-eol): Likewise.
	(tpu-delete-to-bol): Likewise.

	* subr.el (chars-in-region): Add obsolescence declaration for
	`chars-in-region'.

2002-07-03  Miles Bader  <miles@gnu.org>

	* faces.el (header-line): Don't use a `common' clause for
	inheriting from the mode-line face, since we can't override it,
	and we don't want it for ttys.

2002-07-02  Richard M. Stallman  <rms@gnu.org>

	* net/ange-ftp.el (ange-ftp-hook-function): Add file-remote-p prop.

	* files.el (hack-one-local-variable-constantp): New function.
	(hack-one-local-variable-eval-safep): New function.
	Check for `eval:' calling fn with `safe-local-eval-function' property.
	(hack-one-local-variable): Use hack-one-local-variable-eval-safep.
	(c-add-style, c-set-style): Add safe-local-eval-function property.

	* files.el (insert-directory): Handle --dired option to ls.

	* files.el (file-remote-p): New function.

	* emacs-lisp/easymenu.el (easy-menu-popup-menu): New function.

	* startup.el (fancy-splash-screens): Switch to a chosen frame.
	(fancy-splash-frame): Choose the right frame to use.
	(use-fancy-splash-screens-p): Check dimensions of the right frame
	in order to decide.

	* emacs-lisp/bytecomp.el (byte-compile-warning-types):